--- a/YSHRender.vcxproj
+++ b/YSHRender.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClCompile Include="Main\Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DXUtils\d3dx12.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
