第一人称摄像机

--- a/YSHRender.vcxproj
+++ b/YSHRender.vcxproj
@@ -147,9 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera\Camera.cpp" />
     <ClCompile Include="Main\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera\Camera.h" />
     <ClInclude Include="DXUtils\d3dx12.h" />
   </ItemGroup>
   <ItemGroup>
